assets/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import './phoenix';

@layer components {
  input,select,textarea {
    @apply border border-neutral-300 rounded-sm mb-2 p-0 p-1 outline-0 dark:bg-neutral-700 dark:border-neutral-700 dark:text-white text-sm border rounded mb-2 p-1 px-2;
  }

  select {
    padding: 16px;
    padding-right: 30px;
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
    background-repeat: no-repeat, repeat;
    background-position: right .7em top 50%, 0 0;
    background-size: .65em auto, 100%;
  }

  label {
    @apply pb-2 text-sm;
  }

  input::placeholder {
    @apply text-sm;
  }

  .page_title {
    @apply dark:text-white;
  }

  .page_wrapper {
    @apply container mx-auto p-4 w-full lg:w-4/5 mt-12 dark:text-white;
  }

  .tile {
    @apply hover:underline rounded-md text-center py-4 border hover:bg-neutral-50 dark:bg-neutral-600 dark:hover:bg-neutral-700;
  }

  .th_small {
    @apply py-2 text-left text-sm font-normal;
  }

  select {
    padding: 5.5px !important;
    @apply bg-white dark:bg-neutral-700;
  }

  .heading {
    @apply text-2xl mb-8 dark:text-neutral-50 font-bold;
  }

  .comp-full-page-with-center-item {
    @apply w-full flex justify-center items-center flex-1 flex-col lg:pb-24 dark:text-neutral-50 bg-orange-100 dark:bg-neutral-900;
  }


  .heading-with-lines {
    @apply text-xl md:text-2xl my-8 mb-16 md:my-24 w-full dark:text-neutral-50 border-b border-neutral-400 dark:border-white text-center;
    line-height: 0.1em !important;
  }

  .heading-with-lines span {
    @apply bg-white dark:bg-neutral-800;
    padding: 0 10px;
  }

  .card {
    @apply flex flex-col bg-white dark:bg-neutral-800 border drop-shadow-lg rounded p-4 border-neutral-200 dark:border-neutral-700 z-0;
  }

  .recipe-form-label {
    @apply text-gray-700 text-sm dark:text-gray-200;
  }

  .btn {
    @apply bg-green-500 hover:bg-green-600 text-white py-1 px-2 rounded self-start text-sm;
  }

  .btn-alert {
    @apply btn;
    @apply bg-red-500 hover:bg-red-600 active:bg-red-700;
  }

  .btn-white {
    @apply btn;
    @apply bg-white text-neutral-500 hover:bg-gray-50 border border-neutral-300 hover:border-neutral-400 hover:shadow-sm active:bg-gray-100 dark:bg-neutral-600 dark:hover:bg-neutral-700 dark:active:bg-neutral-800 dark:text-white;
  }

  .btn-clear {
    @apply btn;
    @apply btn-white;
    @apply bg-transparent transition ease-in-out;
    @apply text-neutral-100 border-neutral-50;
    @apply hover:text-white hover:bg-blue-800 hover:bg-opacity-20 hover:border-neutral-100 hover:shadow;
  }

  .mobile-menu {
    @apply fixed top-0 left-0 w-full bg-white text-neutral-800 shadow-lg  flex flex-col justify-center items-center mt-10 z-10;
  }

  .mobile-menu-item {
    @apply p-4 text-lg text-center;
  }

  .btn-icon {
    @apply btn-white w-10 flex justify-center opacity-50 hover:opacity-100;
  }

  .select-time {
    @apply bg-white text-black p-2
  }
}


/* -- Phoenix ------------------------------------------------------------------ */

/* Alerts and form errors used by phx.new */
.alert {
  @apply p-2 fixed bottom-0 right-0 m-4 text-sm border shadow-sm cursor-pointer rounded-sm text-neutral-800;
}
.alert-info {
  @apply alert bg-green-100 border-green-400;
}
.alert-warning {
  @apply alert bg-amber-100 border-amber-300;
}
.alert-danger {
  @apply alert bg-red-100 border-red-300;
}
.alert p {
  margin-bottom: 0;
}
.alert:empty {
  display: none;
}
.invalid-feedback {
  color: #F87171;
  display: block;
  /* margin: 0rem 0 2rem; */
  font-size: 12px;
}

.invalid-item {
  border: 1px solid #F87171;

}

/* LiveView specific classes for your customization */
.phx-no-feedback.invalid-feedback,
.phx-no-feedback .invalid-feedback {
  display: none;
}

.phx-click-loading {
  opacity: 0.5;
  transition: opacity 1s ease-out;
}

.phx-loading{
  cursor: wait;
}

.phx-modal {
  opacity: 1!important;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0,0,0,0.4);
}

.phx-modal-content {
  /* background-color: #fefefe; */
  margin: 15vh auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
}

.phx-modal-close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
  margin-top: -12px;
}

.phx-modal-close:hover,
.phx-modal-close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.fade-in-scale {
  animation: 0.2s ease-in 0s normal forwards 1 fade-in-scale-keys;
}

.fade-out-scale {
  animation: 0.2s ease-out 0s normal forwards 1 fade-out-scale-keys;
}

.fade-in {
  animation: 0.2s ease-out 0s normal forwards 1 fade-in-keys;
}
.fade-out {
  animation: 0.2s ease-out 0s normal forwards 1 fade-out-keys;
}

@keyframes fade-in-scale-keys{
  0% { scale: 0.95; opacity: 0; }
  100% { scale: 1.0; opacity: 1; }
}

@keyframes fade-out-scale-keys{
  0% { scale: 1.0; opacity: 1; }
  100% { scale: 0.95; opacity: 0; }
}

@keyframes fade-in-keys{
  0% { opacity: 0; }
  100% { opacity: 1; }
}

@keyframes fade-out-keys{
  0% { opacity: 1; }
  100% { opacity: 0; }
}

